<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:orientation="vertical" >
	<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="550dp" 
        android:orientation="vertical"
        android:background="@drawable/login_bg">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="275dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:inputType="phone" />
        <EditText
            android:id="@+id/pwd"
            android:layout_width="233dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/UserName"
            android:layout_below="@+id/UserName"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/password"
            android:ems="20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" >
            	  <requestFocus />
            </EditText>

        <ImageButton
            android:id="@+id/login"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/pwd"
            android:layout_toRightOf="@+id/pwd"
            android:contentDescription="@string/login"
            android:background="#00000000"
            android:scaleType="centerInside"
            android:src="@drawable/go"  />

        <ImageButton
            android:id="@+id/register"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/pwd"
            android:layout_below="@+id/pwd"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/register"
            android:background="#00000000"
            android:scaleType="centerInside"
            android:src="@drawable/creatcount" />

        <ImageButton
            android:id="@+id/forget"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:contentDescription="@string/forget"
            android:scaleType="centerInside"
            android:src="@drawable/forget" />
    
    </RelativeLayout>
	</LinearLayout>
</ScrollView>