<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="550dp"
	    android:orientation="vertical" 
	    android:background="@drawable/register_bg">

		    <EditText
		        android:id="@+id/username"
		        android:layout_width="275dp"
		        android:layout_height="45dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="168dp"
		        android:drawableLeft="@drawable/username"
		        android:hint="@string/username"
		        android:inputType="phone"
		        android:singleLine="true" />

		        
		    <EditText
		        android:id="@+id/password1"
		        android:layout_width="275dp"
		        android:layout_height="45dp"
		        android:layout_alignLeft="@+id/username"
		        android:layout_below="@+id/username"
		        android:layout_marginTop="15dp"
		        android:drawableLeft="@drawable/password"
		        android:hint="@string/password"
		        android:inputType="textPassword"
		        android:singleLine="true" />

		    <EditText
		        android:id="@+id/password2"
		        android:layout_width="275dp"
		        android:layout_height="45dp"
		        android:layout_alignLeft="@+id/password1"
		        android:layout_below="@+id/password1"
		        android:layout_marginTop="15dp"
		        android:drawableLeft="@drawable/password"
		        android:hint="@string/password1"
		        android:inputType="textPassword"
		        android:singleLine="true" >
		        <requestFocus/>
		    </EditText>

		    <Button
		        android:id="@+id/fasong"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/password2"
		        android:layout_centerHorizontal="true"
		        android:background="#00000000"
		        android:layout_marginTop="18dp"
		        android:text="点击这里发送验证码" />

		    <ImageButton
		        android:id="@+id/justlogin"
		        android:layout_width="120dp"
		        android:layout_height="40dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/register1"
		        android:layout_marginTop="10dp"
		        android:background="#00000000"
		        android:contentDescription="@string/login"
		        android:scaleType="centerInside"
		        android:src="@drawable/justlogin" />

		    <ImageButton
		        android:id="@+id/register1"
		        android:layout_width="271dp"
		        android:layout_height="40dp"
		        android:layout_below="@+id/fasong"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="21dp"
		        android:background="#00000000"
		        android:contentDescription="@string/register"
		        android:scaleType="centerInside"
		        android:src="@drawable/creatcount" />
		    
		 </RelativeLayout>
		 </LinearLayout>
</ScrollView>